2010-08-10  Dustin J. Mitchell <dustin@zmanda.com>
	* amandad-src/amandad.c: unset SUN_PERSONALITY on startup
	* client-src/rundump.c client-src/runtar.c: remove unsetenvs for SUN_PERSONALITY

2010-08-10  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/amlogroll.pl: ignore arguments after the first

2010-08-06  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/amvault.pl: correct test count
	* perl/Amanda/Taper/Scribe.pm: fix nparts calculation

2010-08-06  Stephen Gelman <ssgelm@gmail.com>
	* AUTHORS: add Stephen
	* client-src/rundump.c client-src/runtar.c: unset
	  SUN_PERSONALITY in runtar and rundump, to shut off
	  Nexenta's tendency to magically run Sun binaries

2010-08-05  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/amvault.pl: rewrite to use scribe, clerk
	* installcheck/amvault.pl: check results better
	* server-src/logfile.c server-src/logfile.h: add log_add_full
	* perl/Amanda/Logfile.pod perl/Amanda/Logfile.swg: add log_add_full
	  and make_stats methods
	* perl/Amanda/MainLoop.pod: POD typos
	* perl/Amanda/Recovery/Planner.pm: add shift_dump method
	* perl/Amanda/Taper/Scan.pm: add POD, fix typos
	* perl/Amanda/Taper/Scribe.pm: fix POD, add nparts argument to dump_cb
	* server-src/taper.pl: use nparts, move make_stats to Amanda::Logfile

2010-08-05  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amanda-changers.7.xml: add chg-ndmp VERBOSE
	  property

2010-08-04  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Recovery/Clerk.pm: rename notif_* to clerk_notif_*
	* perl/Amanda/Taper/Scribe.pm: rename notif_* to scribe_notif_*
	* installcheck/Amanda_Recovery_Clerk.pl
	  installcheck/Amanda_Taper_Scribe.pl server-src/amcheckdump.pl
	  server-src/amfetchdump.pl server-src/amidxtaped.pl
	  server-src/taper.pl: use renamed methods

2010-08-04  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Logfile.pod perl/Amanda/Logfile.swg: add log_rename
	  and a method to find the proper timestamp for the current log